--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "vite": "^7.3.1"
   },
   "dependencies": {
-    "@google/genai": "^1.41.0"
+    "@google/genai": "^1.41.0",
+    "openai": "^6.22.0",
+    "zod": "^4.3.6"
   }
 }
